Fixes small visual bug on safari

--- a/client/app/styles/_comments.scss
+++ b/client/app/styles/_comments.scss
@@ -1,7 +1,7 @@
 
 .comments-list {
   border-radius: 2px;
-  box-shadow: -2px 0px 1px $positive;
+  box-shadow: -2px 0px 2px $positive;
   margin-top: 5px;
 }
 
